--- a/index.html
+++ b/index.html
@@ -13,9 +13,13 @@
 
 <body>
     <div id="app">
-<h1>fsdf</h1>
+<h1>第一个个人网站</h1>
     </div>
 
+
+    <script>
+    console.log(1111)
+    </script>
 
 
 
